--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,6 +14,56 @@
         app:title="Wallpaper App"
         app:titleTextColor="@color/white" />
 
+    <LinearLayout
+        android:id="@+id/idLL1"
+        android:layout_below="@id/idToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/search_back"
+        android:focusable="true"
+        android:backgroundTint="@color/white"
+        android:focusableInTouchMode="true"
+        android:orientation="horizontal"
+        android:weightSum="4">
+
+        <!--edit text for displaying edittext-->
+        <EditText
+            android:id="@+id/idEdtSearch"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3.5"
+            android:hint="Search Wallpapers"
+            android:padding="8dp"
+            android:textColorHint="@color/black"
+            android:singleLine="true"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:backgroundTint="@android:color/transparent" />
+
+        <!--image view for displaying search icon-->
+        <ImageView
+            android:id="@+id/idIVSearch"
+            android:layout_width="0dp"
+            app:tint="@color/black"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="0.5"
+            android:padding="4dp"
+            android:src="@drawable/ic_search" />
+
+    </LinearLayout>
+
+    <!--recycler view for displaying categories-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/idRVCategories"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/idLL1"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+         />
+
     <ProgressBar
         android:id="@+id/idPBLoading"
         android:indeterminateTint="@color/yellow"
@@ -25,7 +75,7 @@
         android:id="@+id/idRVNews"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/idToolbar" />
+        android:layout_below="@id/idRVCategories" />
 
 
 </RelativeLayout>
